--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "devDependencies": {
     "cross-env": "^5.1",
-    "resolve-url-loader": "^2.3.1"
+    "resolve-url-loader": "^2.3.1",
+    "sass": "^1.43.2",
+    "sass-loader": "^12.2.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "alpinejs": "^2.8.1",
     "autoprefixer": "^10.2.6",
     "laravel-mix": "^6.0.19"
