--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
                 "Marjose\\notify\\notifyServiceProvider"
             ],
             "aliases": {
-                "Notify": "Marjose\\notify\\Facades\\notify"
+                "Notify": "notify"
             }
         }
     },
